# wordpuzzle-openenv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_standalone.py
server/: app.py
